2008-12-22  Sam Steingold  <sds@gnu.org>

	* modules/libsvm/libsvm.lisp: cast callback libsvm_print_string
	when setting print_string because...
	my 2008-12-19 patch is accept by the upstream with changes:
	* modules/libsvm/svm.cpp, modules/libsvm/svm.h
	(print_string_stdout): not exported
	(print_string): argument is a "const"

2008-12-22  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (prepare-module, finalize-coutput-file):
	module__~A__object_tab is of type gcv_object_t, not object

2008-12-21  Sam Steingold  <sds@gnu.org>

	* stream.d (MAKE-WINDOW) [WIN32_NATIVE]: fix a GC-safety bug

2008-12-21  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (mk_pipe_from_handle): replaces mkips_from_handles
	and mkops_from_handles
	* stream.d (CHECK_UNBUFFERED_ELTYPE): new macro
	(make_pipe_stream): new function: common part of ...
	(MAKE-PIPE-INPUT-STREAM, MAKE-PIPE-OUTPUT-STREAM): use it
	(mk_pipe_from_handle): replaces mkips_from_handles
	and mkops_from_handles
	* pathname.d (make_launch_pipe): accept direction instead of
	parent_inputp
	(LAUNCH): pass direction_t to make_launch_pipe instead of a bool

2008-12-21  Sam Steingold  <sds@gnu.org>

	* foreign.d (FOREIGN-FREE, update_library):
	* stream.d (mkops_from_handles, mkips_from_handles):
	* pathname.d (PROBE-PATHNAME):
	* modules/gdbm/gdbm.c (gdbm_open_read_write):
	* modules/clx/new-clx/clx.f (make_visual_info, make_color):
	fix GC-safety bugs: "TheFoo(STACK_0)->bar = allocate_zot()" is NOT
	safe because lvalue can be computed BEFORE allocation and the GC
	triggered by the allocation will invalidate the lvalue!

2008-12-21  Sam Steingold  <sds@gnu.org>

	* intparam.c (string_length): avoid g++ warning
	"deprecated conversion from string constant to 'char*'"

2008-12-19  Sam Steingold  <sds@gnu.org>

	redirect libsvm output to a lisp stream from C stdout
	* modules/libsvm/libsvm.lisp (*libsvm-output*): new variable
	(write-string-to-libsvm-output): new C call-in (callback)